[project]
name = "rye-sample-project"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "kissy24" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "rye_sample_project:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.2.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_sample_project"]
